Thu Feb  2 22:54:49 GMT 2012  Lee Noar  <leenoar@sky.com>

	* unix/dev.c (__fslseek): File pointer should be set based
	on the old value of lpos not being 0.

Thu Feb  2 20:39:37 GMT 2012  Lee Noar  <leenoar@sky.com>

	* unix/dev.c (__fslseek): For SEEK_CUR, return the current
	file pointer even if lpos is 0.

Sat Jan 21 17:39:02 GMT 2012  Lee Noar  <leenoar@sky.com>

	* include/dlfcn.h: Define RTLD_LOCAL.

Tue Jan 10 23:24:55 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* include/stdlib.h (realloc): Drop malloc attribute.

Fri Dec 30 02:25:34 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (stdio/fpos.c): Remove.
	(stdio/fgetpos.c): Add.
	(stdio/fseek.c): Likewise.
	(stdio/fseeko.c): Likewise.
	(stdio/fsetpos.c): Likewise.
	(stdio/ftell.c): Likewise.
	(stdio/ftello.c): Likewise.
	(stdio/rewind.c): Likewise.
	(stdio/lockfile): Likewise.
	(stdio/getchar.c): Likewise.
	* stdio/fpos.c (fgetpos, fgetpos64, fsetpos, fsetpos64, fseek,
	fseeko, fseeko64, ftell, ftello, ftello64, rewind): Split into
	stdio/fgetpos.c (fgetpos, fgetpos64), stdio/fseek.c (fseek),
	stdio/fseeko.c (fseeko, fseeko64), stdio/fsetpos.c (fsetpos,
	fsetpos64), stdio/ftell.c (ftell), stdio/ftello.c (ftello,
	ftello64), stdio/rewind.c (rewind).
	* stdio/fgetpos.c (fgetpos): Reimplement based on previous ftell
	implementation.
	* stdio/ftell.c (ftell): Reimplement using fgetpos.
	* stdio/ftello.c (ftello): Reimplement using fgetpos.
	* stdio/fsetpos.c (fsetpos): Reimplement based on previous fseek
	implementation.
	(fsetpos64): Fix offset sanity check.
	* stdio/fseek.c (fseek): Reimplement using fsetpos.
	* stdio/fseeko.c (fseeko): Reimplement using fsetpos.
	(fseeko64): Fix offset sanity check.  Use fseeko iso fseek.
	* stdio/rewind.c (rewind): Previous implementation from
	stdio/fpos.c.
	* stdio/putc (fputc): Don't check on writabel streams (is now done
	at __flsbuf). Trim value to be written to 8 bits.
	(putchar): Move to...
	* stdio/putchar.c: ...here (new file).